Fix overflow issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,10 +8,10 @@
 @import "./partials/typography.css";
 
 .ProseMirror {
-  @apply z-0 py-16 pl-20 pr-8 caret-black outline-0 dark:caret-white lg:pl-8 lg:pr-8;
+  @apply z-0 p-24 py-10 caret-black outline-0 dark:caret-white;
 
   & > * {
-    @apply mx-auto max-w-2xl;
+    @apply mx-auto sm:max-w-[60ch] md:max-w-[65ch] lg:max-w-[85ch];
   }
 
   .selection {
